Nevermind horizontal scroll issue is fixed now, once and for all

--- a/assets/style.css
+++ b/assets/style.css
@@ -100,3 +100,10 @@ pre > code {
 .highlight {
     border-radius: 0.3rem;
 }
+
+/* This is so horizontal scroll bar doesnt show in comments with markdown */
+#gh-comments-list pre {
+    white-space:pre-wrap;
+    word-wrap:break-word;
+    text-align:justify;
+}
